--- a/css/MisEstilos.css
+++ b/css/MisEstilos.css
@@ -25,3 +25,58 @@ footer{
 .bg-footer{
     background-color: rgb(0, 0, 0);
 }
+
+/* fondo del banner de eventos*/ 
+.fbanner{
+    width: 100%;
+    height: 95%;
+}
+
+
+/* fondo de Quienes Somos?*/ 
+.somos1{
+    background-image: url("https://1.bp.blogspot.com/-aNHublRbFSw/XxNzMF1sbAI/AAAAAAAACE8/dbmHnUkzD9Qk99ZD9k_mvhtzACZzW7WTQCLcBGAsYHQ/w1350-h764/EPIC%2BUNA%2BPUNO.jpg") ;
+    color: aliceblue;
+    width: 100%;
+    height: 100%;
+}
+
+
+/* ESTILOS CSS DE ROY */
+/* fondo transparente del carrusel de videos institucionales */
+.main-header {
+    position: relative;
+    background: url(../img/background.jpg);
+    background-size: cover;
+    min-height: 600px;
+}
+
+.background-overlay {
+    position: absolute;
+    background: rgba(99, 110, 114, .7);
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+/* Hacer el iframe responsive */
+.carousel-inner iframe {
+    width: 100%;
+    height: 100%;
+}
+/* Color fondo de nosotros */
+.nosotros{
+    background-color:  rgba(58, 4, 4, 0.548) ;
+    text-align: justify;
+}
+/* Color fondo de mision*/
+.mision{
+    background-color: rgba(58, 4, 4, 0.548);
+    text-align: justify;
+}
+/* Color fondo de vision*/
+.vision{
+    background-color:   rgba(58, 4, 4, 0.548);
+    text-align: justify;
+}
